# datafusion-table-providers

./: .gitignore  Cargo.toml  Makefile  README.md  SPICE_PATCHES.md  rust-toolchain.toml
core/: Cargo.toml
core/benches/: sqlite_insert_benchmark.rs
core/examples/: adbc_duckdb.rs  clickhouse.rs  duckdb.rs  duckdb_example.db  duckdb_explain.rs  flight-sql.rs  mongodb.rs  mysql.rs  odbc_sqlite.rs  postgres.rs  postgres_insert.rs  postgres_insert_sql.rs  sqlite.rs  sqlite_example.db
core/src/: adbc.rs  clickhouse.rs  common.rs  duckdb.rs  flight.rs  lib.rs  mongodb.rs  mysql.rs  odbc.rs  oracle.rs  postgres.rs  sqlite.rs
core/src/adbc/: federation.rs  sql_table.rs  write.rs
core/src/clickhouse/: federation.rs  sql_table.rs
core/src/duckdb/: creator.rs  federation.rs  sql_table.rs  write.rs  write_settings.rs
core/src/duckdb/snapshots/: datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_0.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_1.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_2.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_3.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_4.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_5.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_6.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_7.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_multiple_indexes_8.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_primary_key_and_index_0.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_primary_key_and_index_2.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_primary_key_and_index_3.snap  datafusion_table_providers__duckdb__creator__tests__explain_analyze_primary_key_and_index_4.snap
core/src/flight/: codec.rs  exec.rs  sql.rs
core/src/mongodb/: connection.rs  connection_pool.rs  table.rs  write.rs
core/src/mongodb/utils/: arrow.rs  expression.rs  mod.rs  schema.rs  unnest.rs
core/src/mysql/: federation.rs  mysql_window.rs  sql_table.rs  write.rs
core/src/oracle/: federation.rs  sql_table.rs  write.rs
core/src/postgres/: write.rs
core/src/sql/: mod.rs
core/src/sql/arrow_sql_gen/: arrow.rs  mod.rs  mysql.rs  oracle.rs  postgres.rs  sqlite.rs  statement.rs
core/src/sql/arrow_sql_gen/postgres/: builder.rs  composite.rs  hive_schema.rs  schema.rs
core/src/sql/db_connection_pool/: adbcpool.rs  clickhousepool.rs  dbconnection.rs  duckdbpool.rs  mod.rs  mysqlpool.rs  odbcpool.rs  oraclepool.rs  postgrespool.rs  runtime.rs  sqlitepool.rs
core/src/sql/db_connection_pool/dbconnection/: adbcconn.rs  clickhouseconn.rs  (+6 more)
core/src/sql/sql_provider_datafusion/: expr.rs  federation.rs  mod.rs
core/src/sqlite/: between.rs  federation.rs  sql_table.rs  sqlite_decimal.rs  sqlite_interval.rs  write.rs
core/src/util/: arrow.rs  column_reference.rs  constraints.rs  count_exec.rs  dml.rs  indexes.rs  mod.rs  ns_lookup.rs  on_conflict.rs  schema.rs  secrets.rs  supported_functions.rs  table_arg_replace.rs  test.rs
core/tests/: integration.rs
core/tests/adbc/: mod.rs
core/tests/arrow_record_batch_gen/: mod.rs
core/tests/clickhouse/: common.rs  mod.rs
core/tests/docker/: mod.rs
core/tests/duckdb/: mod.rs
core/tests/flight/: mod.rs
core/tests/mongodb/: common.rs  mod.rs
core/tests/mysql/: common.rs  mod.rs
core/tests/oracle/: common.rs  mod.rs
core/tests/postgres/: common.rs  mod.rs  schema.rs  schema_redshift.rs
core/tests/postgres/scripts/: complex_table.sql  complex_table_pg.sql  complex_table_redshift.sql
core/tests/postgres/snapshots/: integration__postgres__schema__postgres_materialized_view_schema_inference.snap  integration__postgres__schema__postgres_schema_inference_complex_types.snap  integration__postgres__schema_redshift__postgres_redshift_materialized_view_schema_inference.snap
core/tests/roundtrip/: mod.rs
core/tests/sqlite/: mod.rs
crates/adbc/: Cargo.toml
crates/adbc/src/: conn.rs  lib.rs  pool.rs  sql_table.rs  write.rs
crates/clickhouse/: Cargo.toml
crates/clickhouse/src/: conn.rs  federation.rs  lib.rs  pool.rs  sql_table.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/util/: column_reference.rs  mod.rs  schema.rs  table_arg_replace.rs
crates/duckdb/: Cargo.toml
crates/duckdb/src/: conn.rs  creator.rs  federation.rs  lib.rs  pool.rs  settings.rs  sql_table.rs  write.rs
crates/flightsql/: Cargo.toml
crates/flightsql/src/: lib.rs  sql.rs
crates/mongodb/: Cargo.toml
crates/mongodb/src/: connection.rs  connection_pool.rs  lib.rs  table.rs
crates/mongodb/src/utils/: arrow.rs  schema.rs  unnest.rs
crates/mysql/: Cargo.toml
crates/mysql/src/: arrow_sql_gen.rs  conn.rs  federation.rs  lib.rs  pool.rs  sql_table.rs  write.rs
crates/odbc/: Cargo.toml
crates/odbc/src/: conn.rs  lib.rs  pool.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: conn.rs  lib.rs  pool.rs  write.rs
crates/postgres/src/arrow_sql_gen/: builder.rs  hive_schema.rs  mod.rs  schema.rs  statement_ext.rs
crates/sqlite/: Cargo.toml
crates/sqlite/src/: arrow_sql_gen.rs  conn.rs  federation.rs  lib.rs  pool.rs  sql_table.rs  write.rs
python/: .gitignore  Cargo.toml  pyproject.toml
python/examples/: clickhouse_demo.py  duckdb_demo.py  flight_demo.py  mongodb_demo.py  mysql_demo.py  odbc_sqlite_demo.py  postgres_demo.py  sqlite_demo.py
python/python/datafusion_table_providers/: __init__.py  clickhouse.py  duckdb.py  flight.py  mongodb.py  mysql.py  odbc.py  postgres.py  sqlite.py
python/python/tests/: test_clickhouse.py  test_duckdb.py  test_flight.py  test_mysql.py  test_odbc.py  test_postgres.py  test_sqlite.py
python/src/: clickhouse.rs  duckdb.rs  flight.rs  lib.rs  mongodb.rs  mysql.rs  odbc.rs  postgres.rs  sqlite.rs  utils.rs
(+155 files in other folders)
