# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
members = ["core", "python"]
resolver = "2"

[workspace.package]
version = "0.9.3"
readme = "README.md"
edition = "2021"
repository = "https://github.com/datafusion-contrib/datafusion-table-providers"
license = "Apache-2.0"
description = "Extend the capabilities of DataFusion to support additional data sources via implementations of the `TableProvider` trait."

[workspace.dependencies]
arrow = "57.0.0"
arrow-array = { version = "57.0.0" }
arrow-flight = { version = "57.0.0", features = [
  "flight-sql-experimental",
  "tls-ring",
  "tls-native-roots",
] }
arrow-ipc = { version = "57.0.0" }
arrow-schema = { version = "57.2.0", features = ["serde"] }
arrow-json = "57.0.0"
arrow-odbc = { version = "21.0.0" }
datafusion = { version = "51", default-features = false }
datafusion-expr = { version = "51" }
datafusion-federation = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "796bd54" }
datafusion-ffi = { version = "51" }
datafusion-proto = { version = "51" }
datafusion-physical-expr = { version = "51" }
datafusion-physical-plan = { version = "51" }
datafusion-table-providers = { path = "core" }
duckdb = { git = "https://github.com/spiceai/duckdb-rs.git", rev = "9bcde793c65b7927639e69e6cc4bf140b7ad8ee2" } # duckdb-1.4.3
adbc_core = { version = "0.21.0" }
adbc_driver_manager = { version = "0.21.0" }
parquet = "57"
rusqlite = "0.37"
tokio-rusqlite = "0.7.0"
async-stream = "0.3.5"
async-trait = "0.1.80"
bigdecimal = "0.4.5"
byteorder = "1.5.0"
chrono = "0.4"
futures = "0.3.30"
itertools = "0.14.0"
num-bigint = "0.4"
secrecy = "0.10.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.124"
snafu = "0.8.3"
time = "0.3.36"
tokio = { version = "1.46", features = ["macros", "fs"] }
tracing = "0.1.40"
url = "2.5.1"
rand = "0.9"
regex = "1"
uuid = "1.9.1"
prost = "0.14.1"
tonic = { version = "0.14", features = ["tls-native-roots", "tls-webpki-roots"] }
bytes = "1.7.1"
base64 = "0.22.1"
dashmap = "6.1.0"
fallible-iterator = "0.3.0"
fundu = "2.0.1"
geo-types = "0.7.13"
sha2 = "0.10"
hickory-resolver = "0.25.2"
sea-query = { git = "https://github.com/spiceai/sea-query.git", rev = "213b6b876068f58159ebdd5852604a021afaebf9", features = [
  "backend-sqlite",
  "backend-postgres",
  "postgres-array",
  "with-rust_decimal",
  "with-bigdecimal",
  "with-time",
  "with-chrono",
] }

[patch.crates-io]
rusqlite = { git = "https://github.com/spiceai/rusqlite.git", rev = "3d1f5f6f6d6d062676210d095df45eafa6e19fd8" } # spiceai-v0.37.0

# spiceai-57.2-patches: ObjectVersionType + new_with_meta support for Azure compatibility
arrow = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-array = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-buffer = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-cast = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-data = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-flight = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-ipc = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-json = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-ord = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-row = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-schema = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-select = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
arrow-string = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
parquet = { git = "https://github.com/spiceai/arrow-rs.git", rev = "ca671dd37d73b730938f77f7a7ad76545280a4a8" }
