[package]
name = "datafusion-table-providers"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = { workspace = true }

[dependencies]
arrow = { workspace = true }
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-table-providers-common = { workspace = true }
tokio = { version = "1.52", features = ["macros", "fs", "rt-multi-thread"] }

datafusion-table-providers-adbc = { workspace = true, optional = true }
datafusion-table-providers-clickhouse = { workspace = true, optional = true }
datafusion-table-providers-duckdb = { workspace = true, optional = true }
datafusion-table-providers-flightsql = { workspace = true, optional = true }
datafusion-table-providers-mongodb = { workspace = true, optional = true }
datafusion-table-providers-mysql = { workspace = true, optional = true }
datafusion-table-providers-odbc = { workspace = true, optional = true }
datafusion-table-providers-postgres = { workspace = true, optional = true }
datafusion-table-providers-sqlite = { workspace = true, optional = true }

[dev-dependencies]
adbc_core = { workspace = true }
adbc_driver_manager = { workspace = true }
anyhow = "1.0"
arrow-flight = { workspace = true }
arrow-json = { workspace = true }
arrow-schema = { workspace = true }
async-trait = "0.1"
bollard = "=0.19.4"
chrono = "0.4.44"
clickhouse = "0.15"
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-federation = { workspace = true, features = ["sql"] }
duckdb = { workspace = true, features = [
  "bundled",
  "r2d2",
  "vtab",
  "vtab-arrow",
  "appender-arrow",
] }
futures = "0.3"
geozero = { version = "0.15.1", features = ["with-wkb"] }
insta = { version = "1.46.0", features = ["filters"] }
mongodb = { version = "3.6.0", features = ["openssl-tls"] }
mysql_async = { version = "0.36", features = [
  "native-tls-tls",
  "chrono",
  "time",
  "bigdecimal",
] }
prost = { version = "=0.14.3" }
r2d2 = "0.8"
r2d2_adbc = "0.3.0"
rand = "0.10"
reqwest = "0.13"
rstest = "0.26.1"
rusqlite = { version = "0.37", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27.0"
test-log = { version = "0.2", features = ["trace"] }
tokio = { version = "1.52", features = ["macros", "fs", "rt-multi-thread"] }
tokio-rusqlite = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[features]
default = []

adbc = ["dep:datafusion-table-providers-adbc"]
clickhouse = ["dep:datafusion-table-providers-clickhouse"]
duckdb = ["dep:datafusion-table-providers-duckdb"]
flight = ["dep:datafusion-table-providers-flightsql"]
mongodb = ["dep:datafusion-table-providers-mongodb"]
mysql = ["dep:datafusion-table-providers-mysql"]
odbc = ["dep:datafusion-table-providers-odbc"]
postgres = ["dep:datafusion-table-providers-postgres"]
sqlite = ["dep:datafusion-table-providers-sqlite"]

# docs.rs-specific configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "odbc_sqlite"
path = "examples/odbc_sqlite.rs"
required-features = ["sqlite", "odbc"]

[[example]]
name = "flight-sql"
path = "examples/flight-sql.rs"
required-features = ["flight"]

[[example]]
name = "sqlite"
path = "examples/sqlite.rs"
required-features = ["sqlite"]

[[example]]
name = "clickhouse"
path = "examples/clickhouse.rs"
required-features = ["clickhouse"]

[[example]]
name = "mongodb"
path = "examples/mongodb.rs"
required-features = ["mongodb"]

[[example]]
name = "postgres"
path = "examples/postgres.rs"
required-features = ["postgres"]

[[example]]
name = "mysql"
path = "examples/mysql.rs"
required-features = ["mysql"]

[[example]]
name = "duckdb"
path = "examples/duckdb.rs"
required-features = ["duckdb"]

[[example]]
name = "duckdb_external_table"
path = "examples/duckdb_external_table.rs"
required-features = ["duckdb"]

[[example]]
name = "duckdb_function"
path = "examples/duckdb_function.rs"
required-features = ["duckdb"]

[[bin]]
name = "sqlite_insert_benchmark"
path = "../benches/sqlite_insert_benchmark.rs"
required-features = ["sqlite"]

[[example]]
name = "adbc"
path = "examples/adbc_duckdb.rs"
required-features = ["adbc"]
