[package]
name = "datafusion-table-providers-python"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = { workspace = true }
publish = false

[lib]
name = "datafusion_table_providers"
crate-type = ["cdylib"]
doc = false

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true, optional = true }
datafusion = { workspace = true }
datafusion-ffi = { workspace = true }
datafusion-python = { workspace = true } 
datafusion-table-providers = { workspace = true }
duckdb = { workspace = true, optional = true }

pyo3 = { version = "0.28" }
tokio = { version = "1.52", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }

[features]
default = [
    "duckdb",
    "clickhouse",
    "sqlite",
    "mysql",
    "postgres",
    "odbc",
    "flight",
    "mongodb",
]
clickhouse = ["datafusion-table-providers/clickhouse"]
duckdb = ["dep:duckdb", "datafusion-table-providers/duckdb"]
sqlite = ["datafusion-table-providers/sqlite"]
mysql = ["datafusion-table-providers/mysql"]
postgres = ["datafusion-table-providers/postgres"]
odbc = ["datafusion-table-providers/odbc"]
flight = ["dep:arrow-flight", "datafusion-table-providers/flight"]
mongodb = ["datafusion-table-providers/mongodb"]
