[package]
name = "datafusion-table-providers-clickhouse"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "DataFusion clickhouse table provider"

[dependencies]
arrow = { workspace = true }
arrow-ipc = { workspace = true, features = ["lz4"] }
async-stream = "0.3"
async-trait = "0.1"
clickhouse = "0.15"
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-federation = { workspace = true, features = ["sql"], optional = true }
datafusion-table-providers-common = { workspace = true }
futures = "0.3"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
snafu = "0.9"
tokio = { version = "1.52", features = ["macros", "fs"] }
tracing = "0.1"
secrecy = "0.10"
url = "2.5"

[features]
default = ["federation"]
federation = ["dep:datafusion-federation", "datafusion-table-providers-common/federation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
