[package]
name = "datafusion-table-providers-common"
version = { workspace = true }
readme = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Shared infrastructure for DataFusion table providers"

[dependencies]
arrow = { workspace = true }
arrow-json = { workspace = true }
async-trait = "0.1"
bigdecimal = "0.4"
byteorder = "1.5"
chrono = "0.4.44"
datafusion = { workspace = true, default-features = false, features = ["sql"] }
datafusion-federation = { workspace = true, features = ["sql"], optional = true }
dashmap = "6.1"
fallible-iterator = "0.3"
fundu = "2.0"
futures = "0.3"
geo-types = "0.7"
itertools = "0.15"
num-bigint = "0.5"
rand = { version = "0.10" }
regex = { version = "1" }
sea-query = { version = "1.0.0", features = [
  "backend-sqlite",
  "backend-postgres",
  "postgres-array",
  "with-rust_decimal",
  "with-bigdecimal",
  "with-time",
  "with-chrono",
] }
secrecy = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
snafu = "0.9"
time = "0.3"
tokio = { version = "1.52", features = ["macros", "fs"] }
tracing = "0.1"
hickory-resolver = "0.26"
url = "2.5"

[features]
default = ["federation"]
federation = ["dep:datafusion-federation"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
